@@ -2,5 +2,5 @@ Collector-Script: ar-info
 Author: Stéphane Glondu <steph@glondu.net>
 Info: This script runs the "ar t" command over all .a files of package.
 Type: binary
-Needs-Info: unpacked, fields, index
+Needs-Info: unpacked, index
 Version: 1
