@@ -5,4 +5,4 @@ Info: This script copies the <tt>changelog</tt> file and
  directory.
 Type: binary
 Version: 1
-Needs-Info: unpacked, fields
+Needs-Info: unpacked
