@@ -4,4 +4,4 @@ Info: This script copies the <tt>README.Debian</tt> file of a package into
  the lintian directory.
 Type: binary
 Version: 1
-Needs-Info: unpacked, fields
+Needs-Info: unpacked
