@@ -1,6 +1,9 @@
 #!/usr/bin/perl -w
 # fields -- lintian collector script
 
+# DEPRECATED - Lintian::Collect pulls the fields directly from the
+# from the relevant places and caches them.
+
 # Copyright (C) 1998 Christian Schwarz
 #
 # This program is free software; you can redistribute it and/or modify
@@ -21,54 +24,10 @@
 
 use strict;
 use warnings;
-use lib "$ENV{'LINTIAN_ROOT'}/lib";
-use Util;
-
-($#ARGV == 1) or fail('syntax: fields <pkg> <type>');
-my $pkg = shift;
-my $type = shift;
-my $file;
-my $data;
-
-if ($type eq 'changes'){
-    $file = 'changes';
-} elsif ($type eq 'binary' or $type eq 'udeb'){
-    $file = 'control/control';
-} elsif ($type eq 'source') {
-    $file = 'dsc';
-}
-
-if (!defined($file)) {
-    fail("Cannot extract files for $type") unless ($type =~ m/^remove-/);
-} elsif (not -e $file) {
-    fail('fields invoked in the wrong directory');
-}
 
 if (-d 'fields'){
-    delete_dir('fields') or fail('Could not remove old fields directory');
-}
-
-# Exit now if we are just removing.
-exit 0 unless (defined($file));
-
-mkdir('fields', 0777) or fail("mkdir fields: $!");
-
-if ($type eq 'changes' or $type eq 'source'){
-    $data = get_dsc_info($file);
-} elsif ($type eq 'binary' or $type eq 'udeb'){
-    $data = (read_dpkg_control($file))[0];
-    $data->{'source'} or ($data->{'source'} = $data->{'package'});
-}
-
-# create control field files
-for my $field (keys %$data) {
-    my $value = $data->{$field};
-    # checks/fields will convert colons into slashes
-    $field =~ s,/,:,g;
-    my $field_file = "fields/$field";
-    open(F, '>', $field_file) or fail("cannot open file $field_file for writing: $!");
-    print F $value,"\n";
-    close(F) or fail("Could not write $field_file: $!");
+    delete_dir('fields') or die 'Could not remove old fields directory';
 }
 
 exit 0;
+
