@@ -2,5 +2,5 @@ Collector-Script: fields
 Info: This script extracts the contents of the control file into
  fields/<tt>field</tt>.
 Type: binary, udeb, source, changes
-Needs-info: bin-pkg-control
 Version: 1
+Auto-Remove: yes
