@@ -3,4 +3,4 @@ Author: Richard Braakman <dark@xs4all.nl>
 Info: This script runs the file(1) command over all files of any kind of package.
 Type: binary, udeb, source
 Version: 1
-Needs-Info: unpacked, fields, index
+Needs-Info: unpacked, index
