@@ -3,4 +3,4 @@ Author: Richard Braakman <dark@xs4all.nl>
 Info: This script runs the md5sums(1) over all files in a binary package.
 Type: binary, udeb
 Version: 1
-Needs-Info: unpacked, fields, index
+Needs-Info: unpacked, index
